series fix
